--- a/project.Rmd
+++ b/project.Rmd
@@ -4,5 +4,9 @@ output: html_document
 ---
 
 The course will finish with an individual project in the form of a data-blog 
-post, making use of a number of tools taught in the course, and a short oral 
-presentation. The project (3 hp) is graded on a scale A-F.
+post, making use of a several different tools taught in the course, and a short oral 
+presentation. The project (3 hp) is graded on a scale A-F. To get inspiration and
+a feeling of the level of ambition expected, see e.g.
+
+* [The Olympic Medal Table Visualized Gapminder Style.](http://staff.math.su.se/hoehle/blog/2016/08/21/gapMedal.html)
+* [Vilken är Kents mest deprimerande låt?](http://dataland.rbind.io/2017/10/15/vilken-%C3%A4r-kents-mest-deprimerande-lat/)
