--- a/class1.Rmd
+++ b/class1.Rmd
@@ -16,8 +16,10 @@ Börja med att skapa ett R-projekt "Classroom" genom att klona `https://github.c
 
 Systembolagets sortiment från 2018-01-12 sinns i filen `data/Products-2018-jan-12-081155.csv`. Den är hämtad från <https://www.systembolaget.se/api/> och sparad som `.csv`-fil från Excel (ej helt reproducerbart!). Läs in och undersök innehållet med
 ```{r, eval = FALSE}
-Sortiment_hela <-  read.csv2("data/Products-2018-jan-12-081155.csv", 
-                        dec =".", stringsAsFactors = FALSE)
+library(tidyverse)
+Sortiment_hela <- read_delim("data/Products-2018-jan-12-081155.csv", 
+                 delim = ";",
+                 locale = locale(encoding = "latin1", decimal_mark = "."))
 ```
 
 ### Uppgifter (träning av `arrange`, `filter`, `mutate`, `%>%`)
@@ -26,7 +28,7 @@ Sortiment_hela <-  read.csv2("data/Products-2018-jan-12-081155.csv",
 
 * Ett fåtal produkter har fått varugrupp `Röda` respektive `Vita` istället för `Rött vin` respektive `Vitt vin`. Korrigera detta, t.ex. genom att använda `mutate` med ett `ifelse`-kommando.
 
-* Vilken dryck har högst `PrisPerLiter`? Lägg in svaret (i form av R-kod) i den löpande texten i ditt `.Rmd`-dokument.
+* Vilken dryck har högst `PrisPerLiter`? Lägg in svaret (d.v.s. dryckens `Namn` i form av R-kod) i den löpande texten i ditt `.Rmd`-dokument.
 
 * Skapa ett nytt datamaterial `Sortiment_ord` med det ordinarie sortimentet (d.v.s. där variabeln `SortimentText` antar värdet `Ordinarie sortiment`). Gör sedan en tabell (t.ex. med `kable`) över de 10 dyraste (i `PrisPerLiter`) dryckerna ur detta sortiment. Använd `select` för att välja ut lämpliga variabler som skall ingå i tabellen.
 
