--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -7,9 +7,9 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r, echo = FALSE, message=FALSE}
-library(jsonlite)
-library(tidyverse)
-library(knitr)
+suppressPackageStartupMessages(library(jsonlite))
+suppressPackageStartupMessages(library(tidyverse))
+suppressPackageStartupMessages(library(knitr))
 
 # Byt https mot aktuellt schemalänk nedan
 TimeEdit_URL <- "https://se.timeedit.net/web/su/db1/stud1/ri157345X69Z06Q5Z86g2Ye0yZ076Y32Q0ngQY5Q5572l073oQb5ZWn54%C3%A4KW6c5unQWrl1boW3Z3qud3uuXahWd7blK6Qa765XW1pcBW8W54j6Lj4Wp8VW5W0586m53Xa%C3%A47V0nXao7YXY7w54WX58W568613XY56WW3133wcYIvw0W9Y5x4VorW94XxWW6o94a6oV8W1Wj2oYWV1Wo55WYV677W6Yo3V3X95V0.json"
@@ -20,7 +20,7 @@ datum <- unique(fromJSON(TimeEdit_URL, flatten = TRUE)$reservations) %>%
     distinct() # %>% apply(., 1, paste, collapse = ", ")
 topics <- c(
     "[Introduction. Software, GitHub and Markdown.](day1.html) [[Slides]](https://rawgit.com/MT5013-VT18/MT5013-VT18.github.io/master/slides/slide1.html#1)",
-    "[Tidyverse: Basic dplyr and ggplot2.](day2.html)",
+    "[Tidyverse: Basic dplyr and ggplot2.](day2.html) [[Slides]](https://rawgit.com/MT5013-VT18/MT5013-VT18.github.io/master/slides/slide2.html#1)",
     "Tidyverse: group_by and summarise, more ggplot2.",
     "Exploratory data analysis",
     "Exploring high-dimensional data: Principal components and clustering",
