--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -6,7 +6,7 @@ title: "Schedule VT18"
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r, echo = FALSE, message=FALSE}
+```{r, echo = FALSE, message=FALSE, warning=FALSE}
 suppressPackageStartupMessages(library(jsonlite))
 suppressPackageStartupMessages(library(tidyverse))
 suppressPackageStartupMessages(library(knitr))
