--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -21,7 +21,7 @@ datum <- unique(fromJSON(TimeEdit_URL, flatten = TRUE)$reservations) %>%
 topics <- c(
     "[Introduction. Software, GitHub and Markdown.](day1.html) [[Slides]](https://rawgit.com/MT5013-VT18/MT5013-VT18.github.io/master/slides/slide1.html#1)",
     "[Tidyverse: Basic dplyr and ggplot2.](day2.html) [[Slides]](https://rawgit.com/MT5013-VT18/MT5013-VT18.github.io/master/slides/slide2.html#1)",
-    "Tidyverse: group_by and summarise, more ggplot2.",
+    "[Tidyverse: group_by and summarise, more ggplot2.](day3.html)",
     "Exploratory data analysis",
     "Exploring high-dimensional data: Principal components and clustering",
     "Cleaning data: Tidy data. Long to wide and back.",
