--- a/project.Rmd
+++ b/project.Rmd
@@ -1,12 +1,12 @@
 ---
-title: "Project"
+title: "Projekt (3hp, betyg A-F)"
 output: html_document
 ---
 
-The course will finish with an individual project in the form of a data-blog 
-post, making use of a several different tools taught in the course, and a short oral 
-presentation. The project (3 hp) is graded on a scale A-F. To get inspiration and
-a feeling of the level of ambition expected, see e.g.
+Kursen avsultas med ett individuellt projekt i formen av ett data-intensivt blogg-inlägg. Inlägget skall belysa en frågeställning med hjälp av ett unikt datamaterial och samtidigt illustrera användningen av flertalet av kursens verktyg. Projektet skall vara klart **2018-03-12** då det även presenteras kortfattat muntligen (ca 5 min).
+
+För att få inspiration och en uppfattning om den avsedda omfattningen, se nedanstående inlägg:
 
 * [The Olympic Medal Table Visualized Gapminder Style.](http://staff.math.su.se/hoehle/blog/2016/08/21/gapMedal.html)
 * [Vilken är Kents mest deprimerande låt?](http://dataland.rbind.io/2017/10/15/vilken-%C3%A4r-kents-mest-deprimerande-lat/)
+* [Are #python users more likely to get into Slytherin?](http://www.masalmon.eu/2018/01/01/sortinghat/)
