--- a/exam.Rmd
+++ b/exam.Rmd
@@ -1,7 +1,12 @@
 ---
-title: "Exam"
+title: "Digital tentamen (1.5 hp, betyg A-F)"
 output: html_document
 ---
 
-An electronic exam involving live coding in an RStudio environment will test 
-skills in wrangling, tidying and visualisation of data. The exam (1.5 hp) is graded on a scale A-F.
+En digital tentamen, motsvarande 1.5 hp, är schemalagd eftermiddagen **2018-02-27**. Denna examinerar grundläggande färdighet i att använda kursens verktyg med flervalsfrågor samt problemlösning i RStudio-miljö. Tillåtna hjälpmedel kommer inkludera
+
+* [R Markdown Cheat Sheet](https://github.com/rstudio/cheatsheets/raw/master/rmarkdown-2.0.pdf)
+* [Data Visualization Cheat Sheet](https://github.com/rstudio/cheatsheets/raw/master/data-visualization-2.1.pdf)
+* [Data Transformation Cheat Sheet](https://github.com/rstudio/cheatsheets/raw/master/data-transformation.pdf)
+
+som delas ut i samband med tentamen.
