--- a/day2.Rmd
+++ b/day2.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'Day 2: Tidyverse: Basic dplyr and ggplot2.'
+title: 'Dag 2: Tidyverse: Grundläggande dplyr och ggplot2.'
 output:
   html_document:
     toc: true
@@ -8,7 +8,7 @@ output:
 
 ## Do this before class
 
-Read [R4DS](http://r4ds.had.co.nz/) chapters 3.1-3.6, 5.1-5.3
+Read [R4DS](http://r4ds.had.co.nz/) chapters 3.1-3.6, 5.1-5.5
 
 Complete assignments *Data wrangling* and *Data visualization* (first two chapters of Introduction to the Tidyverse) at [DataCamp](https://www.datacamp.com/groups/statistisk-databehandling-vt18/details).
 
