--- a/index.Rmd
+++ b/index.Rmd
@@ -1,16 +1,16 @@
 ---
-title: "Welcome to MT5013"
+title: "Välkommen till MT5013"
 ---
 
-This is the course web-site for Statistical Data Processing ([MT5013](https://sisu.it.su.se/search/archive_info/MT5013)) at the [department of Mathematics](http://www.math.su.se/), [Stockholm University](http://www.su.se/). The course gives and introduction to obtaining, wrangling, exploring and visualising data using R. Main litterature will be [R for Data Science](http://r4ds.had.co.nz/index.html) by Grolemund and Wickham complemented by courses from [DataCamp](https://www.datacamp.com/home).
+Detta är kurshemsidan till ([MT5013](https://sisu.it.su.se/search/archive_info/MT5013)), Statistisk databehandling vid [Matematiska institutionen](http://www.math.su.se/), [Stockholms universitet](http://www.su.se/). Kursen ger en introuktion till att läsa, städa, formatera och visualisera data i R. Kurslitteratur är [R for Data Science](http://r4ds.had.co.nz/index.html) av Grolemund och Wickham samt ett antal kurser från [DataCamp](https://www.datacamp.com/home).
 
 ### Examination
-Examination constists of
+Examinationen består av
 
-* [Weekly individual homework assignments with sharp deadlines and peer review.](HW.html)
+* [Veckovisa inlämningsuppgifter med kamratgranskning.](HW.html)
 
-* [An electronic exam (date to be announced).](exam.html)
+* [En digital tentamen.](exam.html)
 
-* [An individual project.](project.html)
+* [Ett individuellt projekt.](project.html)
 
-Note that DataCamp assignments are not part of the examination.
+Uppgifter på DataCamp ingår inte i kursens examination.
