--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -23,8 +23,8 @@ topics <- c(
     "[Tidyverse: Basic dplyr and ggplot2.](day2.html) [[Slides]](https://rawgit.com/MT5013-VT18/MT5013-VT18.github.io/master/slides/slide2.html#1)",
     "[Tidyverse: group_by and summarise, more ggplot2.](day3.html)",
     "[Exploratory data analysis](day4.html)",
-    "Cleaning data: Tidy data. Long to wide and back.",
-    "Relational data: Combining tables with dplyr joins.",
+    "[Cleaning data: Tidy data. Long to wide and back.](day5.html)",
+    "[Relational data: Combining tables with dplyr joins.](day6.html)",
         "Exploring high-dimensional data: Principal components and clustering",
     "Relational data: SQL basics. **Guest lecture: Sebastian Tengborg from [King](https://king.com/sv)**",
     "Text data: Regular expressions.",
