--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -25,7 +25,7 @@ topics <- c(
     "[Exploratory data analysis](day4.html)",
     "[Cleaning data: Tidy data. Long to wide and back.](day5.html)",
     "[Relational data: Combining tables with dplyr joins.](day6.html)",
-        "Exploring high-dimensional data: Principal components and clustering",
+        "[Exploring high-dimensional data: Principal components and clustering](day7.html)",
     "Relational data: SQL basics. **Guest lecture: Sebastian Tengborg from [King](https://king.com/sv)**",
     "Text data: Regular expressions.",
     "Using APIs: httr, JSON and XML.",
