Added schedule pages

--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -25,13 +25,13 @@ topics <- c(
     "[Exploratory data analysis](day4.html)",
     "[Cleaning data: Tidy data. Long to wide and back.](day5.html)",
     "[Relational data: Combining tables with dplyr joins.](day6.html)",
-        "[Exploring high-dimensional data: Principal components and clustering](day7.html)",
-    "Relational data: SQL basics. **Guest lecture: Sebastian Tengborg from [King](https://king.com/sv)**",
-    "Text data: Regular expressions.",
-    "Using APIs: httr, JSON and XML.",
-    "Web-scraping: Basic rvest.",
-    "R Programming: Programming with functions.",
-    "R Programming: Functional programming with purrr. **Guest lecture: Mehrdad Mamaghani from [Prime](https://primegroup.com/article/insight-mapping-usa-on-facebook-the-case-for-macro-targeting/)**",
+    "[Exploring high-dimensional data: Principal components and clustering](day7.html)",
+    "[Relational data: SQL basics](day8.html). **Guest lecture: Sebastian Tengborg from [King](https://king.com/sv)**",
+    "[Text data: Regular expressions.](day9.html)",
+    "[Using APIs: httr, JSON and XML.](day10.html)",
+    "[Web-scraping: Basic rvest.](day11.html)",
+    "[R Programming: Programming with functions.](day12.html)",
+    "[R Programming: Functional programming with purrr.](day13.html) **Guest lecture: Mehrdad Mamaghani from [Prime](https://primegroup.com/article/insight-mapping-usa-on-facebook-the-case-for-macro-targeting/)**",
     "Presenting: Principles of visualisation.",
     "Exam.",
     "Project presentation.")
