--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -25,7 +25,7 @@ topics <- c(
     "[Exploratory data analysis](day4.html)",
     "[Cleaning data: Tidy data. Long to wide and back.](day5.html)",
     "[Relational data: Combining tables with dplyr joins.](day6.html)",
-    "[Exploring high-dimensional data: Principal components and clustering](day7.html)",
+    "[Exploring high-dimensional data: Principal components and clustering](day7.html)[[Slides]](https://rawgit.com/MT5013-VT18/MT5013-VT18.github.io/master/slides/slide7.html#1)",
     "[Relational data: SQL basics](day8.html). **Guest lecture: Sebastian Tengborg from [King](https://king.com/sv)**",
     "[Text data: Regular expressions.](day9.html)",
     "[Using APIs: httr, JSON and XML.](day10.html)",
