--- a/HW.Rmd
+++ b/HW.Rmd
@@ -14,7 +14,7 @@ HW <- c(
     "[HW1: GitHub test-run](HW1.html)",
     "[HW2: Grundläggande tidyverse](HW2.html)",
     "[HW3: Tabellhantering](HW3.html)",
-    "HW4",
+    "[HW4: Austen vs Rowling](HW4.html)",
     "HW5",
     "HW6"
 )
