--- a/day10.Rmd
+++ b/day10.Rmd
@@ -10,4 +10,11 @@ output:
 
 Lös kapitlen *Downloading Files and Using API Clients*, *Using httr to interact with APIs directly* och *Handling JSON and XML* på [DataCamp](https://www.datacamp.com/groups/statistisk-databehandling-vt18).
 
+Läs: Kapitel 1-3 i [An introduction to APIs](https://zapier.com/learn/apis/)
+
+Resurser: 
+
+* [ProgrammableWeb](https://www.programmableweb.com/) innehåller en omfattande katalog över öppna APIer.
+* [Öppna data och PSI](https://oppnadata.se/) innehåller en katalog över resurser från svenska myndigheter.
+
 ## Under lektion
